--- a/application.css
+++ b/application.css
@@ -6,54 +6,102 @@ background color: #f5f5f5*/
 body {
     margin: 0;
     padding: 0;
-    
-  }
-  nav {
+    background-color: #f5f5ef;    
+}
+nav {
     background-color: #707a8a;
     margin: 0;
     overflow: hidden;
-  }
-  nav ul {
+}
+nav ul {
     margin: 0;
     padding: 0;
     display: flex;
-  }
-  nav ul li {
+}
+nav ul li {
     display: inline-block;
     list-style-type: none;
-  }
-  nav ul li a {
+}
+nav ul li a {
     font-family: "Roboto-Condensed", sans-serif;
     font-size: 15px;
-    color: white;
+    color:#f5f5f5;
     background-color: #707a8ad;
     display: block;
     line-height: 3em;
     padding: 1em 1.5em;
     padding-right: 3em;
     text-decoration: none;
-  }
-  nav ul li:first-child {
+}
+nav ul li:first-child {
     margin-right: auto;
-  }
-  .nav-logo {
-      width: 150px;
-      height: 50px;
-      padding: 10px;
-      padding-left: 30px;
-    }
+}
+.nav-logo {
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    padding-left: 30px;
+}
 
-    .logo-mr-c {
-        width: 180px;
-        margin-left: auto;
-        margin-right: auto;
-        display: flex;
-      }
-
-    .mr-c-salle {
+.logo-mr-c {
+    width: 180px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+}
+.image-wrapper {
+    width: 100%;
+    position: relative;
+    padding: 10px 70px;
+}
+.image-wrapper img {
+  width: 90%;  
+}
+.text {
+    color: white;
+    position: absolute;
+    top: 10%;
+    left: 30%;
+    font-family: sans-serif;
+    text-shadow:2px 2px 8px black;
+} 
+.three-things {
+    font-family: sans-serif;
+    color: #5c5b5b;
+    text-align: center;
+    font-size: x-large;
+    font-weight: 900;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+.box-container {
+    display: flex;
+    border: 1px #bcc0c7 solid;
+}
+.left {
+    display: flex;
+    margin-left: 40px;
+    margin: 20px;
+    background-color: #bcc0c7;
+   
+}
+.center {
+    display: flex;
+    margin: 20px;
+  
+}
+.right {
+    display: flex;
+    margin-right: 40px;
+    margin: 20px;
+    background-color: #bcc0c7;
+}
+    
+    
+      /*.mr-c-salle {
         display: flex;
         width: 90%;
         padding: 10px 70px;
         
-    }
+    }*/
   
