--- a/application.css
+++ b/application.css
@@ -3,11 +3,13 @@ light-gray: #bcc0c7
 dark-grey: #5c5b5b
 background color: #f5f5f5*/
 
+
 body {
     margin: 0;
     padding: 0;
     background-color: #f5f5ef;    
 }
+/* Nav-bar */
 nav {
     background-color: #707a8a;
     margin: 0;
@@ -24,7 +26,7 @@ nav ul li {
 }
 nav ul li a {
     font-family: "Roboto-Condensed", sans-serif;
-    font-size: 15px;
+    font-size: .65em;
     color:#f5f5f5;
     background-color: #707a8ad;
     display: block;
@@ -37,12 +39,43 @@ nav ul li:first-child {
     margin-right: auto;
 }
 .nav-logo {
-    width: 100%;
+    width: 80%;
     height: 50px;
     padding: 10px;
     padding-left: 30px;
 }
+/* Nav-bar ends */
 
+/* Footer */
+.foot-contain {
+    background-color: #707a8a;
+    text-align: center;
+      /*display: flex; When flex is applied I can't center the ul */
+    display: inline-block;
+}
+.my-list {
+    list-style-type: none;
+}
+.list-items {
+    display: inline-block;
+    padding: 15px;
+}
+.social-logo{
+    width: 25px;
+}
+.foot-logo {
+    width: 50px;
+}
+.follow-us {
+    text-align: center;
+    font-family: sans-serif;
+    font-size: .65em; 
+    padding-top: 25px;
+    color: #f5f5f5;
+}
+/* Footer ends */
+
+/* Homepage */
 .logo-mr-c {
     width: 180px;
     margin-left: auto;
@@ -52,10 +85,11 @@ nav ul li:first-child {
 .image-wrapper {
     width: 100%;
     position: relative;
-    padding: 10px 70px;
+    
 }
 .image-wrapper img {
-  width: 90%;  
+  width: 85%; 
+  margin: 10px 100px; 
 }
 .text {
     color: white;
@@ -76,32 +110,29 @@ nav ul li:first-child {
 }
 .box-container {
     display: flex;
-    border: 1px #bcc0c7 solid;
+    align-content: center;
 }
 .left {
-    display: flex;
-    margin-left: 40px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 25%;
+    margin-left: 50px;
     margin: 20px;
     background-color: #bcc0c7;
-   
 }
 .center {
-    display: flex;
-    margin: 20px;
-  
-}
-.right {
-    display: flex;
-    margin-right: 40px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 25%;
     margin: 20px;
     background-color: #bcc0c7;
 }
+.right {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 25%;
     
+    margin: 20px;
+    background-color: #bcc0c7;
+}
+.icon-cafe {
+    width: 100px;
+}
     
-      /*.mr-c-salle {
-        display: flex;
-        width: 90%;
-        padding: 10px 70px;
-        
-    }*/
-  
