--- a/application.css
+++ b/application.css
@@ -51,7 +51,7 @@ nav ul li:first-child {
     background-color: #707a8a;
     text-align: center;
       /*display: flex; When flex is applied I can't center the ul */
-    display: inline-block;
+    
 }
 .my-list {
     list-style-type: none;
@@ -64,7 +64,10 @@ nav ul li:first-child {
     width: 25px;
 }
 .foot-logo {
-    width: 50px;
+    width: 45px;
+    float: left;
+    padding-left: 35px;
+    padding-top: 25px;
 }
 .follow-us {
     text-align: center;
@@ -75,7 +78,7 @@ nav ul li:first-child {
 }
 /* Footer ends */
 
-/* Homepage */
+/* Image with text */
 .logo-mr-c {
     width: 180px;
     margin-left: auto;
@@ -98,7 +101,10 @@ nav ul li:first-child {
     left: 30%;
     font-family: sans-serif;
     text-shadow:2px 2px 8px black;
-} 
+}
+/* Image with text ends */
+
+/* Three things */
 .three-things {
     font-family: sans-serif;
     color: #5c5b5b;
@@ -110,12 +116,12 @@ nav ul li:first-child {
 }
 .box-container {
     display: flex;
-    align-content: center;
+    /*align-content: center;*/
+    margin-left: 110px;
 }
 .left {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     width: 25%;
-    margin-left: 50px;
     margin: 20px;
     background-color: #bcc0c7;
 }
@@ -134,5 +140,22 @@ nav ul li:first-child {
 }
 .icon-cafe {
     width: 100px;
+}
+.icon-hands {
+    width: 100px;
+}
+.icon-book {
+    width: 100px;
+}
+.card-text-heading {
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+}
+.card-text {
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: .65em;
 }
     
