--- a/application.css
+++ b/application.css
@@ -105,7 +105,7 @@ nav ul li:first-child {
 /* Image with text ends */
 
 /* Three things */
-.three-things {
+.three-things, .discover-us {
     font-family: sans-serif;
     color: #5c5b5b;
     text-align: center;
@@ -182,6 +182,46 @@ nav ul li:first-child {
     width: 250px;
     height: 60px;
     border-radius: 10px;
-    box-shadow:0px 0px 3px #5c5b5b;
+    box-shadow: 0.25px 0.25px 0.25px #bcc0c7;
 }
-  
+
+/* 7 days a week header */
+ 
+.days-7 {
+    display: flex;
+}
+.day-logo-7 {
+    width: 80px; 
+    height: 90px;
+    margin-left: 100px;  
+}
+.day-7-text-bold {
+    font-family: sans-serif;
+    color: #5c5b5b;
+    font-weight: 900;
+    padding: 30px;
+}
+/* Header ends */
+/* Pottery & Philosophy */
+.activities {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
+    margin-top: -40px;
+}
+.pottery, .philosophy {
+    width: 35%;
+    margin: 50px;
+}
+.day-7-text-normal {
+    font-family: sans-serif;
+    color: #5c5b5b;
+    font-weight: 500;
+    text-align: center;
+}
+.activities-text-bold {
+    font-family: sans-serif;
+    color: #5c5b5b;
+    font-weight: 800;
+}
