--- a/application.css
+++ b/application.css
@@ -31,7 +31,7 @@ nav ul li a {
     display: block;
     line-height: 3em;
     padding: 1em 1.5em;
-    padding-right: 3em;
+    padding-right: em;
     text-decoration: none;
 }
 nav ul li:first-child {
@@ -83,12 +83,12 @@ nav ul li:first-child {
     display: flex;
 }
 .image-wrapper {
-    width: 100%;
+    width: 90%;
     position: relative;
     
 }
 .image-wrapper img {
-  width: 85%; 
+  width: 92%; 
   margin: 10px 100px; 
 }
 .text {
@@ -112,8 +112,9 @@ nav ul li:first-child {
 }
 .box-container {
     display: flex;
-    /*align-content: center;*/
-    margin-left: 140px;
+    justify-content: center;
+    align-content: center;
+    /*margin-left: 140px;*/
 }
 .left {
     box-shadow:  1px 1px 10px #5c5b5b;
@@ -130,23 +131,22 @@ nav ul li:first-child {
 .right {
     box-shadow:  1px 1px 10px #5c5b5b;
     width: 25%;
-    
     margin: 25px;
     background-color: #bcc0c7;
 }
 .icon-cafe {
     width: 100px;
-    padding-left: 90px;
+    padding-left: 105px;
     padding-top: 30px;
 }
 .icon-hands {
     width: 100px;
-    padding-left: 90px;
+    padding-left: 105px;
     padding-top: 30px;
 }
 .icon-book {
     width: 100px;
-    padding-left: 90px;
+    padding-left: 105px;
     padding-top: 30px;
 }
 .card-text-heading {
@@ -295,4 +295,41 @@ nav ul li:first-child {
 }
 .location-width {
     width: 700px;
+}
+/* Media queries */
+/*Homepage */
+@media only screen and (max-width: 813px) {
+    .box-container {
+        flex-wrap: wrap;
+    }
+    ..image-wrapper img {
+        display: flex;
+        justify-self: center;
+    }
+    .left, .center, .right {
+        width: 35%;
+    }
+    .icon-cafe, .icon-book, .icon-hands {
+        display: none;
+    }
+    nav {
+        width: 520px;
+    }
+    footer {
+        width: 520px;
+    }
+    .text {
+        display: none;
+    }
+    .logo-mr-c {
+       margin-left: 150px;
+    }
+    .three-things {
+        margin-left: 150px;   
+    }
+    .box-container {
+        justify-content:space-around;
+    }
+    /*About*/
+    
 }
