--- a/application.css
+++ b/application.css
@@ -333,3 +333,46 @@ nav ul li:first-child {
     /*About*/
     
 }
+
+/* Form style */
+.form {
+    display: flex;
+    justify-content: center;
+    color: #5c5b5b;
+    font-size: 1.2em;
+    width: 100%;
+}
+input {
+    margin: 15px;
+    width: 670px;
+    height: 50px;
+    background-color: #bcc0c7;
+    border: #bcc0c7;
+    border-radius: 0%;
+}
+::placeholder {
+    color: white;
+}
+#message {
+    height: 150px
+}
+textarea {
+    margin: 15px;
+    width: 670px;
+    height: 50px;
+    background-color: #bcc0c7;
+    border: #bcc0c7;
+    border-radius: 0%;
+    font-family: sans-serif;
+}
+#submit {
+    margin-left: 230px;
+    background-color: #707a8a;
+    color: white;
+    font-family: sans-serif;
+    font-size: 1.1em;
+    width: 250px;
+    height: 60px;
+    border-radius: 10px;
+    box-shadow: 0.25px 0.25px 0.25px #bcc0c7;
+}
