--- a/application.css
+++ b/application.css
@@ -6,7 +6,8 @@ background color: #f5f5f5*/
 body {
     margin: 0;
     padding: 0;
-    background-color: #f5f5ef;    
+    background-color: #f5f5ef;
+    height: 100%;    
 }
 /* Nav-bar */
 nav {
@@ -48,8 +49,8 @@ nav ul li:first-child {
 .foot-contain {
     background-color: #707a8a;
     text-align: center;
+
       /*display: flex; When flex is applied I can't center the ul */
-    
 }
 .my-list {
     list-style-type: none;
@@ -335,7 +336,7 @@ nav ul li:first-child {
 }
 
 /* Form style */
-.form {
+.form-style {
     display: flex;
     justify-content: center;
     color: #5c5b5b;
@@ -365,7 +366,7 @@ textarea {
     border-radius: 0%;
     font-family: sans-serif;
 }
-#submit {
+#send {
     margin-left: 230px;
     background-color: #707a8a;
     color: white;
@@ -374,5 +375,62 @@ textarea {
     width: 250px;
     height: 60px;
     border-radius: 10px;
-    box-shadow: 0.25px 0.25px 0.25px #bcc0c7;
+    box-shadow: 1px 1px 1px #080f1f;
 }
+#formError {
+    display: flex;
+    justify-content: center;
+    font-family: sans-serif;
+    color: #5c5b5b;
+    font-size: .8em;
+    font-weight: bolder;
+}
+
+/* Pop-up */
+.modal-container {
+    display: none;  
+    position: fixed;
+    /*display: flex;*/
+    justify-content: center;
+    align-items: center; 
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;  
+    background-color: rgba(0,0,0,0.4);
+}
+.modal {
+    background-color: white;
+    margin: 15% auto;
+    padding: 2%;
+    padding-top: 4%;
+    border: 1px solid #bcc0c7;
+    width: 80%;
+    height: 65%;
+    text-align: center;
+    font-family: sans-serif;
+    color: #5c5b5b;
+}
+div.modal>img {
+    width: 8%;
+    float: left;
+}
+.my-button {
+    background-color: #707a8a;
+    color: white;
+    font-family: sans-serif;
+    font-size: 1.1em;
+    width: 30%;
+    height: 60px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px #080f1f;
+}
+div.modal>p {
+    text-align: center;
+}
+.answer {
+    padding-left: 4%
+}
+    
